--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media-query.css" />
     <script src="https://kit.fontawesome.com/2514c28606.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <div id="header">
@@ -199,7 +200,7 @@
    
    
    
-   
+<!--    
    <script>
 
        var tablinks = document.getElementsByClassName("tab-links");
@@ -248,7 +249,7 @@
           })
           .catch(error => console.error('Error!', error.message))
       })
-    </script>
+    </script> -->
 
   </body>
 </html>
